# ImageCaptioning-VLM

./: .gitignore  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  SETUP.md  STRUCTURE.md  docker-compose.yml  dvc.yaml  requirements.txt
app/: __init__.py
configs/: default.yaml  model_config.yaml  training_config.yaml
configs/default/: config.yaml
data/: README.md
deployment/api/: main.py
deployment/docker/: Dockerfile
mlops/ci_cd/: github_actions.yml
monitoring/grafana/: dashboard.json
monitoring/prometheus/: prometheus.yml
notebooks/: 01_data_exploration.ipynb  exploration.ipynb
scripts/: evaluate.sh  export_model.py  inference.sh  prepare_data.py  prepare_data.sh  quick_start.sh  train.py  train.sh
src/: data_utils.py  dataset.py  evaluate.py  inference.py  preprocessing.py  train.py
src/data/: __init__.py  loaders.py  tokenization.py
src/data_preparation/: preprocess.py
src/evaluation/: metrics.py
src/inference/: __init__.py
src/models/: loaders.py  peft_adapters.py
src/monitoring/: drift_detection.py
src/training/: evaluate.py  train.py
src/vlm_caption_finetune_mlops/: __init__.py
src/vlm_caption_finetune_mlops/evaluation/: __init__.py
src/vlm_caption_finetune_mlops/models/: __init__.py
tests/: __init__.py  test_api.py  test_metrics.py
vlm-caption-finetune-mlops/: .gitignore  README.md  dvc.yaml  pyproject.toml
vlm-caption-finetune-mlops/.github/workflows/: ci.yml
vlm-caption-finetune-mlops/app/: api.py  gradio_demo.py
vlm-caption-finetune-mlops/configs/default/: dataset.yaml  lora.yaml  model.yaml
vlm-caption-finetune-mlops/scripts/: evaluate.py  run_inference.py
vlm-caption-finetune-mlops/src/vlm_caption_finetune_mlops/data/: preprocessing.py
vlm-caption-finetune-mlops/src/vlm_caption_finetune_mlops/inference/: predictor.py
vlm-caption-finetune-mlops/src/vlm_caption_finetune_mlops/models/: training.py
vlm-caption-finetune-mlops/tests/: test_data.py
